# star-kirby-lang

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: nom_example.rs
src/: error.rs  lib.rs  main.rs  telemetry.rs
src/ast/: function_literal.rs  mod.rs  tests.rs
src/ast/expression/: array.rs  array_literal.rs  boolean.rs  call.rs  call_expression.rs  function.rs  function_literal.rs  hash.rs  hash_literal.rs  if_expression.rs  index.rs  index_expression.rs  infix.rs  infix_expression.rs  integer.rs  integer_literal.rs  mod.rs  prefix.rs  prefix_expression.rs  string.rs  string_literal.rs
src/ast/statement/: block.rs  block_statement.rs  expression.rs  expression_statement.rs  let_statement.rs  mod.rs  return_statement.rs
src/evaluator/: builtins.rs  mod.rs  tests.rs
src/lexer/: mod.rs  tests.rs
src/object/: array.rs  boolean.rs  built_in_function.rs  environment.rs  function.rs  hash.rs  integer.rs  mod.rs  null.rs  return_value.rs  string.rs  unit.rs
src/object/macro/: mod.rs  quote.rs
src/parser/: mod.rs  operator_priority.rs  parser_tracing.rs  tests.rs
src/repl/: mod.rs
src/token/: mod.rs  token_type.rs
