[package]
name = "star-kirby-lang"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
lazy_static = "1.4.0"
whoami = "1.4.1"
anyhow = "1.0.75"
env_logger = "0.10.1"
global = "0.4.3"
thiserror = "1.0.50"
nom = "7.1.3"
