[package]
name = "star-kirby-lang"
version = "0.1.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "star-kirby-lang"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
whoami = "1.4.1"
anyhow = "1.0.75"
global = "0.4.3"
thiserror = "1.0.50"
nom = "7.1.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
derive_more = "0.99.17"
